# robotframework-jsonschemavalidator

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: acceptance.yml  build.yml  compatibility.yml  create_keyword_document.yml  deploy.yml  deploy_testpypi.yml  test.yml
JsonValidator/: JsonValidator.py  __init__.py  errors.py
docs/: index.html  jsonvalidator.html
src/JsonSchemaValidator/: JsonSchemaValidator.py  __init__.py
src/JsonValidator/: JsonValidator.py  __init__.py  validation_errors.py
src/jsonvalidator/: JsonValidator.py  __init__.py
test/: atest.robot  smoke.robot
test/testdata/: schema-2.json  schema.json  test.json
