[project]
name = "robotframework-jsonvalidator"
version = "0.1.0"
description = "A lightweight JSON Schema validation library for Robot Framework with clear error reporting and flexible validation modes."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Mickel Jacobs", email = "avenstar90@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Robot Framework",
    "Topic :: Software Development :: Testing",
]
keywords = ["robotframework", "json", "jsonschema", "validation", "test-library", "test", "testing", "test-automation"]
homepage = "https://github.com/MarketSquare/robotframework-jsonvalidator"
repository = "https://github.com/MarketSquare/robotframework-jsonvalidator"
documentation = "https://github.com/MarketSquare/robotframework-jsonvalidator#readme"


requires-python = ">=3.10,<4.0"
dependencies = [
    "jsonschema>=4.26.0",
    "robotframework>=7.4.1",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "jsonschema>=4.26.0",
    "robotcode>=2.2.0",
    "robotframework>=7.4.1",
    "ruff>=0.14.14",
    "tabulate>=0.9.0",
]


[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "JsonValidator"

