[project]
name = "robotframework-jsonschemavalidator"
version = "1.0.0"
description = "A lightweight JSON Schema validation library for Robot Framework with clear error reporting and flexible validation modes."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Mickel Jacobs" }
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Robot Framework",
    "Topic :: Software Development :: Testing",
]
keywords = ["robotframework", "json", "jsonschema", "validation", "test-library", "test", "testing", "test-automation"]


requires-python = ">=3.10,<4.0"
dependencies = [
    "jsonschema>=4.26.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
rf70 = ["robotframework>=7.0.0,<7.1.0"]
rf71 = ["robotframework>=7.1.0,<7.2.0"]
rf72 = ["robotframework>=7.2.0,<7.3.0"]
rf73 = ["robotframework>=7.3.0,<7.4.0"]
rf74 = ["robotframework>=7.4.0,<7.5.0"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "docutils>=0.22.4",
    "jsonschema>=4.26.0",
    "pygments>=2.20.0",
    "robotcode>=2.2.0",
    "ruff>=0.14.14",
    "tabulate>=0.9.0",
]

[tool.uv]
conflicts = [
    [
        {extra = "rf70"},
        {extra = "rf71"},
        {extra = "rf72"},
        {extra = "rf73"},
        {extra = "rf74"},
    ]
]

[tool.semantic_release]
commit_parser = "conventional"
version_toml = ["pyproject.toml:project.version"]
allow_zero_version = true
build_command = "uv build"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "JsonSchemaValidator"

